Fix about scroll on mobile

--- a/src/components/about-us/AboutUs.module.scss
+++ b/src/components/about-us/AboutUs.module.scss
@@ -2,6 +2,7 @@
 
 .container {
     width: 100%;
+    padding-top: 2rem;
     margin: 2rem;
     display: flex;
     flex-direction: column;
